# swift6.3

./: Makefile  README.md
.github/workflows/: build-ios-minimal-swift-compiler-staged.yml  build-ios-minimal-swift-compiler.yml  build-llvm-clang.yml  build-production-and-demo-app.yml  release-toolchain.yml  swift-frontend.yml  swiftlite-ios.yml
indie-swift-compiler/: .gitignore  Makefile  Package.resolved  Package.swift  README.md
indie-swift-compiler/Config/: compatibility-profile.json  compiler-pipeline.json  irgen-dependency-report.json  irgen-source-set.json  minimal-update-checkout-config.json  release-artifacts.json  sil-dependency-report.json  sil-source-set.json
indie-swift-compiler/DemoApp/: Readme.md
indie-swift-compiler/Docs/: IOS_OFFLINE_COMPILER_STRATEGY.md  docs.txt
indie-swift-compiler/Examples/: hello.swift
indie-swift-compiler/Scripts/: analyze_irgen_dependencies.sh  analyze_sil_dependencies.sh  apple_build_common.sh  bootstrap_minimal_toolchain_repos.sh  (+24 more)
scripts/: ensure_exec_bits.py
swift-lite/: CMakeLists.txt  README.md
swift-lite/bridge/: SwiftLiteFrontend.swift  swiftlite_compiler.cpp
swift-lite/core/: ClangImporterConfigAdapter.cpp  NativePipeline.cpp  NativePipeline.h  SDKConfig.cpp  SDKConfig.h  SwiftFrontendPipeline.cpp  SwiftFrontendPipeline.h
swift-lite/docs/: build-matrix.md
swift-lite/include/: swiftlite_compiler.h  swiftlite_errors.h
swift-lite/package/: layout.md
swift-lite/samples/mvp/: hello.swift
swift-lite/scripts/: build-core.sh  configure-llvm.sh  create-xcframework.sh  package-ios.sh
(+50 files in other folders)
